[package]
name = "forge-lib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.5.0"
semver = { version = "1.0.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.107"
slug = "0.1.4"
xz2 = "0.1.7"
